<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="release_key">AIzaSyDiriRGQ6Gz7ZCbZcSbaFBnewZeHLifPbc</string>
    <string name="debug_key">AIzaSyBN21-mklbCy-T-ZEEQGWXpGl_JEiuIQYo</string>
    <string name="id_tag_key">id</string>
    <string name="subzone_tag_key">subzone</string>
    <string name="urlpic_tag_key">urlpic</string>
    <string name="app_name">BeeHive</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">List</string>
    <string name="footer">Footer</string>
    <string name="action_search">Search</string>
    <string name="search_title">Search</string>
    <string name="refresh_title">Refresh</string>
    <string name="share_title">Share</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_share">Share</string>
    <string name="title_options">Options</string>
    <string name="search_hint">Where do you want to go ?</string>
    <string name="no_items">No items to display</string>
    <string name="title_week">WEEKLY</string>
    <string name="title_day">DAILY</string>
    <string name="title_contribution">YOUR CONTRIBUTION</string>
    <string name="title_queue">LINE</string>
    <string name="contribution_default">0</string>
    <string name="contribution_pts_default">pts</string>
    <string name="contribution_rank_default">Larva Yellow Jacket</string>
    <string name="time_ampm_default">AM</string>
    <string name="queue1">Closed</string>
    <string name="queue2">Short Line</string>
    <string name="queue3">Medium Line</string>
    <string name="queue4">Long Line</string>
    <string name="queue_question">How was the place today?</string>
    <string name="queue_footer">Send</string>
    <string name="occupancy">Occupancy: \u0020</string>
    <string name="time_to_go">Go: \u0020</string>
    <string name="string_default">N/A</string>
    <string name="image_description">TODO</string>
    <string name="queue">Line: \u0020</string>
    <string name="req_error">Check your data connection and try again</string>
    <string name="credit_version">Version 1.1 © BeeHive</string>
    <string name="credit_website">www.letsbeehive.com</string>
</resources>