<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dip" >

    <LinearLayout
        android:id="@+id/layout_pics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/pics"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/occupancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/string_default"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/layout_pics"
        android:orientation="vertical" >

        <!-- /// TITLE /// -->

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/string_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- /// TIME TO GO /// -->

            <TextView
                android:id="@+id/time_to_go_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/time_to_go"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time_to_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginRight="10dp"
                android:text="@string/string_default"
                android:textColor="@color/black"
                android:textSize="16sp" />
            
            <TextView
                android:id="@+id/queue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/queue"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:maxLines="1"
                android:text="@string/string_default"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>