<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- /// BUILDING NAME /// -->

    <LinearLayout
        android:id="@+id/layout_pics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/subzone_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/subzone_occupancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/string_default"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/subzone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/layout_pics"
        android:maxLines="1"
        android:text="@string/string_default"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:id="@+id/subzone_separator"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_below="@+id/subzone_name"
        android:layout_toRightOf="@+id/layout_pics"
        android:background="@color/black" />

    <TextView
        android:id="@+id/subzone_description"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subzone_separator"
        android:layout_toRightOf="@+id/layout_pics"
        android:textStyle="italic"
        android:maxLines="3"
        android:text="@string/string_default"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <!-- /// BEST TIME TO GO /// -->

    <LinearLayout
        android:id="@+id/timetogo_layout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subzone_description"
        android:layout_toRightOf="@+id/layout_pics"
        android:orientation="horizontal" >

        <!-- /// TIME TO GO /// -->

        <TextView
            android:id="@+id/subzone_timetogo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/time_to_go"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/subzone_timetogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/string_default"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- /// BEST TIME TO GO /// -->

    <LinearLayout
        android:id="@+id/queue_layout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timetogo_layout"
        android:layout_toRightOf="@+id/layout_pics"
        android:orientation="horizontal" >

        <!-- /// QUEUE /// -->

        <TextView
            android:id="@+id/subzone_queue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/queue"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/subzone_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/string_default"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>